// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.vue renders OXD button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--main" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD button with custom color 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--main" style="background-color: palegreen;">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD ghost button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--ghost" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD ghost-danger button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--ghost-danger" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD ghost-info button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--ghost-info" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD ghost-success button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--ghost-success" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD ghost-warn button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--ghost-warn" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD iconName button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--main" type="button"><i class="oxd-icon bi-arrow-left oxd-button-icon"></i> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD iconRightName button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--main" type="button">
  <!--v-if--> Button <i class="oxd-icon bi-arrow-right oxd-button-icon"></i>
</button>
`;

exports[`Button.vue should renders OXD label button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--label" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD label-danger button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--label-danger" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD label-info button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--label-info" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD label-success button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--label-success" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD label-warn button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--label-warn" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD large button 1`] = `
<button class="oxd-button oxd-button--large oxd-button--main" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD main button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--main" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD medium button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--main" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD secondary button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--secondary" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD small button 1`] = `
<button class="oxd-button oxd-button--small oxd-button--main" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD solid danger button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--danger" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD solid info button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--info" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD solid success button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--success" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD solid warn button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--warn" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD text button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--text" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD tool button 1`] = `
<button class="oxd-button oxd-button--medium oxd-button--tool" type="button">
  <!--v-if--> Button
  <!--v-if-->
</button>
`;
